# Smart-College01

./: .replit  README.md  db.sqlite3  manage.py  pyproject.toml  replit.md
SmartCollege/: asgi.py  settings.py  urls.py  wsgi.py
advanced_features/: admin.py  apps.py  models.py  views.py
advanced_features/migrations/: 0001_initial.py
attached_assets/: Pasted-Add-a-polished-site-wide-Dynamic-Background-Dark-Mode-feature-to-the-project-Requirements-1--1759388663359_1759388663361.txt
attendance_app/: models.py  recognize_attendance.py  train_faces.py  urls.py  views.py
attendance_app/migrations/: 0001_initial.py  0002_alter_attendance_options_attendance_marked_by_and_more.py
chat_app/: consumers.py  models.py  urls.py  views.py
chat_app/migrations/: 0001_initial.py
college_app/: chatbot_views.py  models.py  urls.py  views.py
college_app/migrations/: 0001_initial.py  0002_userinvite.py  0003_busroute_assignment_bulletin_buslocation_and_more.py  0004_payment_account_number_payment_ifsc_code.py  0005_collegeinfo.py  0006_profile_course_profile_photo_profile_roll_number_and_more.py  0007_payment_razorpay_order_id_and_more.py
healthcare_app/: models.py  urls.py  views.py
healthcare_app/migrations/: 0001_initial.py
library_app/: models.py  urls.py  views.py
library_app/migrations/: 0001_initial.py
static/css/: style.css
static/js/: theme.js
staticfiles/js/: theme.js
templates/: base.html
templates/attendance_app/: mark_attendance.html  report.html  unauthorized.html  view_attendance.html
templates/chat_app/: list.html  room.html
(+39 files in other folders)
