[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "channels>=4.3.1",
    "channels-redis>=4.3.0",
    "daphne>=4.2.1",
    "django>=5.2.7",
    "djangorestframework>=3.16.1",
    "numpy>=2.3.3",
    "opencv-python-headless>=4.11.0.86",
    "pillow>=11.3.0",
    "razorpay>=2.0.0",
]
