[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "celery>=5.5.3",
    "channels>=4.3.1",
    "channels-redis>=4.3.0",
    "daphne>=4.2.1",
    "django-cors-headers>=4.9.0",
    "django>=5.2.7",
    "djangorestframework>=3.16.1",
    "matplotlib>=3.10.6",
    "numpy>=2.3.3",
    "opencv-python-headless>=4.11.0.86",
    "openpyxl>=3.1.5",
    "ortools>=9.14.6206",
    "pandas>=2.3.3",
    "pillow>=11.3.0",
    "python-decouple>=3.8",
    "qrcode>=8.2",
    "razorpay>=2.0.0",
    "redis>=6.4.0",
    "reportlab>=4.4.4",
    "scikit-learn>=1.7.2",
    "djangorestframework-simplejwt>=5.5.1",
    "web3>=7.13.0",
    "django-otp>=1.6.1",
]
